--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/art": "github:react-native-community/art",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/core": "^6.2.1",
     "@react-navigation/drawer": "^6.4.1",
@@ -19,18 +20,26 @@
     "@react-navigation/native-stack": "^6.7.0",
     "@react-navigation/routers": "^6.1.0",
     "@react-navigation/stack": "^6.2.1",
-    "expo": "~50.0.14",
-    "expo-status-bar": "~1.11.1",
-    "expo-image": "~1.10.6",
+    "@rneui/base": "^4.0.0-rc.4",
+    "@rneui/themed": "^4.0.0-rc.6",
+    "@tensorflow-models/posenet": "^2.2.2",
+    "@tensorflow/tfjs": "^3.21.0",
+    "@tensorflow/tfjs-converter": "^3.21.0",
+    "expo": "^51.0.8",
+    "expo-camera": "^15.0.9",
     "expo-font": "~11.10.3",
+    "expo-image": "~1.10.6",
+    "expo-status-bar": "~1.11.1",
+    "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-calendars": "^1.1305.0",
+    "react-native-canvas": "^0.1.39",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "^3.14.1",
-    		"@rneui/base": "^4.0.0-rc.4",
-		"@rneui/themed": "^4.0.0-rc.6"
+    "expo-image-picker": "~15.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
