--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-camera": "^15.0.9",
     "expo-font": "~11.10.3",
     "expo-image": "~1.10.6",
+    "expo-image-picker": "~15.0.5",
     "expo-status-bar": "~1.11.1",
     "lodash": "^4.17.21",
     "react": "18.2.0",
@@ -39,7 +40,7 @@
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "^3.14.1",
-    "expo-image-picker": "~15.0.5"
+    "react-native-webview": "^13.10.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
