--- a/package.json
+++ b/package.json
@@ -37,10 +37,14 @@
     "react-native-calendars": "^1.1305.0",
     "react-native-canvas": "^0.1.39",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-image-picker": "^7.1.2",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "^3.14.1",
-    "react-native-webview": "^13.10.2"
+    "react-native-webview": "^13.10.2",
+    "react-native-web": "~0.19.10",
+    "react-dom": "18.2.0",
+    "@expo/metro-runtime": "~3.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
